tests/baselines/reference/callSignaturesWithDuplicateParameters.errors.txt
==== tests/cases/conformance/types/objectTypeLiteral/callSignatures/callSignaturesWithDuplicateParameters.ts (22 errors) ====
    // Duplicate parameter names are always an error
    
    function foo(x, x) { }
                    ~
!!! error TS2300: Duplicate identifier 'x'.
    var f = function foo(x, x) { }
                            ~
!!! error TS2300: Duplicate identifier 'x'.
    var f2 = function (x, x) { }
                          ~
!!! error TS2300: Duplicate identifier 'x'.
    var f3 = (x, x) => { }
                 ~
!!! error TS2300: Duplicate identifier 'x'.
    var f4 = <T>(x: T, x: T) => { }
                       ~
!!! error TS2300: Duplicate identifier 'x'.
    
    function foo2(x: string, x: number) { }
                             ~
!!! error TS2300: Duplicate identifier 'x'.
    var f5 = function foo(x: string, x: number) { }
                                     ~
!!! error TS2300: Duplicate identifier 'x'.
    var f6 = function (x: string, x: number) { }
                                  ~
!!! error TS2300: Duplicate identifier 'x'.
    var f7 = (x: string, x: number) => { }
                         ~
!!! error TS2300: Duplicate identifier 'x'.
    var f8 = <T>(x: T, y: T) => { }
    
    class C {
        foo(x, x) { }
               ~
!!! error TS2300: Duplicate identifier 'x'.
        foo2(x: number, x: string) { }
                        ~
!!! error TS2300: Duplicate identifier 'x'.
        foo3<T>(x: T, x: T) { }
                      ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    interface I {
        (x, x);
            ~
!!! error TS2300: Duplicate identifier 'x'.
        (x: string, x: number);
                    ~
!!! error TS2300: Duplicate identifier 'x'.
        foo(x, x);
               ~
!!! error TS2300: Duplicate identifier 'x'.
        foo(x: number, x: string);
                       ~
!!! error TS2300: Duplicate identifier 'x'.
        foo3<T>(x: T, x: T);
                      ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    var a: {
        foo(x, x);
               ~
!!! error TS2300: Duplicate identifier 'x'.
        foo2(x: number, x: string);
                        ~
!!! error TS2300: Duplicate identifier 'x'.
    };
    
    var b = {
        foo(x, x) { },
               ~
!!! error TS2300: Duplicate identifier 'x'.
        a: function foo(x: number, x: string) { },
                                   ~
!!! error TS2300: Duplicate identifier 'x'.
        b: <T>(x: T, x: T) => { }
                     ~
!!! error TS2300: Duplicate identifier 'x'.
    }